# civ1_cht

./: .gitignore  LICENSE  README.md
data/: dialog_translations.json  inline_translations.json
docs/: PROJECT_MEMORY.md  SKILL.md
launcher/: Civilization-CHT.bat  README.txt
openciv1pp/: .gitignore  CMakeLists.txt  README.md
openciv1pp/assets/: zh_TW.json
openciv1pp/src/: main.cpp
openciv1pp/src/game/: CheckPlayerTurn.cpp  CheckPlayerTurn.h  CityView.cpp  CityView.h  CommonTools.cpp  CommonTools.h  DrawTools.cpp  DrawTools.h  FrontEndFlow.cpp  FrontEndFlow.h  GameLoadAndSave.cpp  GameLoadAndSave.h  GameMenus.cpp  GameMenus.h  Government.h  ImageTools.cpp  ImageTools.h  LanguageTools.cpp  LanguageTools.h  MainCode.cpp  MainCode.h  MainIntro.cpp  MainIntro.h  MapManagement.cpp  MapManagement.h  MenuBoxDialog.cpp  MenuBoxDialog.h  MiniWorld.cpp  MiniWorld.h  OpenCiv1Game.cpp  OpenCiv1Game.h  TechResearch.cpp  TechResearch.h  TerrainTiles.cpp  TerrainTiles.h  TextBoxDialogs.cpp  TextBoxDialogs.h  UnitManagement.cpp  UnitManagement.h
openciv1pp/src/graphics/: CjkGlyphCache.cpp  CjkGlyphCache.h  GBitmap.cpp  GBitmap.h  GDriver.h  GFont.cpp  GFont.h  Palette.h
openciv1pp/src/localization/: Translator.cpp  Translator.h
openciv1pp/src/platform/: SdlPresenter.cpp  SdlPresenter.h
openciv1pp/src/resource/: Compression.cpp  Compression.h  PicLoader.cpp  PicLoader.h  TextResource.cpp  TextResource.h
openciv1pp/src/vcpu/: VCPU.cpp  VCPU.h
tools/: build_portable_sfx.ps1  edilzss2_decode.py  inline_string_extract.py  inline_string_patch.py  inline_string_triage.py  ne_dialog_extract.py  ne_dialog_extract_v2.py  ne_dialog_patch.py  ne_font_inspect.py  ne_font_patch_charset.py  setup_wsl_wine.sh  wine_setup_phase2.sh
